# hetu

./: .gitignore  LICENSE  README.md  hai-agent-design.md  hfile-design.md  index.html  package-lock.json  package.json  tsconfig.json  update-xterm-6.1.0.md  vite.config.ts
.github/workflows/: release.yml
.qwen/pending-skills/ec9ba9bb-b0a4-42c1-9576-c00725f4285d/auto-skill-xterm-v6-scrollbar-double-width/: SKILL.md
.qwen/skills/auto-skill-glass-bg-noise-water-stain/: SKILL.md
.qwen/skills/auto-skill-ssh-exit-fallback-to-local/: SKILL.md
.qwen/skills/auto-skill-tauri-v2-window-close-permissions/: SKILL.md
.qwen/skills/auto-skill-xterm-transparent-bg-settings-perf/: SKILL.md
.qwen/skills/auto-skill-xterm-tui-right-click-copy/: SKILL.md
.qwen/skills/auto-skill-xterm-v6-scrollbar-double-width/: SKILL.md
.qwen/skills/auto-skill-xterm-webgl-context-loss-garbled-text/: SKILL.md
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
src/: dialogs.ts  explorer.ts  feed.ts  fonts.css  imeGuard.ts  ipc.ts  keybindings.ts  layout.ts  main.ts  pane.ts  panelResize.ts  settings.ts  styles.css  tabs.ts  themes.ts  transfers.ts  types.ts  ui.ts
src-tauri/: Cargo.lock.old  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  error.rs  lib.rs  local.rs  main.rs  settings.rs  slot.rs  sshcfg.rs
src-tauri/src/agent/: config.rs  mod.rs  openai.rs  protocol.rs  provider.rs  roles.rs  session.rs  tools.rs  tools_ssh.rs
src-tauri/src/ssh/: conn.rs  mod.rs  pane.rs  sftp.rs
src/ai/: agent-modal.ts  hai.ts  protocol.ts  renderer.ts
