[package]
name = "superssh"
version = "0.1.0"
description = "新一代 SSH 终端：自实现 SSH 协议栈 + 现代 WebUI 融合体验"
edition = "2021"

[lib]
name = "superssh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
russh = "0.52"
russh-sftp = "2"
portable-pty = "0.9"
base64 = "0.22"
dirs = "6"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
window-vibrancy = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
