[package]
name = "hetushell"
version = "3.1.0-beta6"
description = "河图终端 HetuShell：终端 + AI/工具链的融合体验，原生支持自实现 SSH"
authors = ["BraveWang"]
license = "MulanPSL-2.0"
repository = "https://github.com/master-genius/hetu"
edition = "2021"

[lib]
name = "hetushell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
russh = "0.62"
russh-sftp = "2"
portable-pty = "0.9"
base64 = "0.22"
dirs = "6"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
window-vibrancy = "0.6"
fs2 = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
async-trait = "0.1"
futures-util = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
